[package]
name = "ssz_rs"
version = "0.9.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "ethereum's simple serialize"
repository = "https://github.com/ralexstokes/ssz-rs"
exclude = ["tests/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "std"]
std = ["bitvec/default", "sha2/default", "alloy-primitives/default"]
sha2-asm = ["sha2/asm"]
serde = ["dep:serde", "alloy-primitives/serde"]

[dependencies]

[dev-dependencies]
snap = "1.0"
project-root = "0.2.2"
serde_json = "1.0.81"
hex = "0.4.3"

[build-dependencies]
sha2 = "0.9.8"
